--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"clsx": "^2.1.0",
 		"lodash": "^4.17.21",
 		"next": "14.2.1",
 		"next-intl": "^3.11.3",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-select": "^5.8.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
