--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^1.7.2",
 		"clsx": "^2.1.0",
+		"cookies-next": "^4.2.1",
 		"framer-motion": "^11.2.10",
 		"lodash": "^4.17.21",
 		"next": "14.2.1",
