--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"clsx": "^2.1.0",
 		"cookies-next": "^4.2.1",
 		"framer-motion": "^11.2.10",
+		"immer": "^10.1.1",
 		"lodash": "^4.17.21",
 		"next": "14.2.1",
 		"next-intl": "^3.11.3",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-select": "^5.8.0"
+		"react-select": "^5.8.0",
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
