--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
-		"clsx": "^2.1.0",
+		"clsx": "^2.1.1",
 		"cookies-next": "^4.2.1",
-		"framer-motion": "^11.2.10",
+		"framer-motion": "^11.2.13",
 		"immer": "^10.1.1",
 		"lodash": "^4.17.21",
-		"next": "14.2.1",
-		"next-intl": "^3.11.3",
-		"react": "^18",
-		"react-dom": "^18",
+		"next": "^14.2.4",
+		"next-intl": "^3.15.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-select": "^5.8.0",
 		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
+		"@types/node": "^20.14.9",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^8.57.0",
 		"eslint-config-next": "14.2.1",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"postcss": "^8.4.39",
+		"tailwindcss": "^3.4.4",
+		"typescript": "^5.5.3"
 	}
 }
