--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-select": "^5.8.0",
+		"sharp": "^0.33.4",
 		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
